[package]
name = "tetris"
version = "0.1.0"
authors = ["ktnyuta <yutapypy0930@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
device_query = "0.2.2"
colored = "1.9.2"
tokio = { version = "0.2", features = ["full"] }